--- a/public/assets/css/style/form.css
+++ b/public/assets/css/style/form.css
@@ -59,7 +59,7 @@
 .form-input {
   display: block;
   width: 100%;
-  padding: 0.375rem 0.75rem;
+  padding: 1rem 0.75rem !important;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
