--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -651,7 +651,7 @@ mobileMenu
 
 .mobileMenu-top {
     position: relative;
-    height: 60px;
+    height: 70px;
     background-color: #fff;
     box-shadow: none;
     border: solid 1px rgba(0, 0, 0, 0.03);
@@ -687,6 +687,7 @@ mobileMenu
     align-items: center;
     justify-content: center;
     gap: 3px;
+    cursor: pointer;
 }
 
 .openMenu .lineMenu {
@@ -910,7 +911,6 @@ footer*/
     /*height: 76vh;
     */
     height: 100vh;
-    display: flex;
     position: relative;
     background: url('../../img/studio-bg.jpg') no-repeat;
     background-size: cover;
@@ -923,12 +923,21 @@ footer*/
 
 .wallpaper>* {
     z-index: 11111;
+    text-align: center;
 }
 
 .wallpaper h1,
-.wallpaper span,.wallpaper h3 {
-    text-transform: uppercase;
-    font-family: 'Roboto-Bold';
+.wallpaper h3 {
+    font-size: 1.8rem;
+    text-align-last: center;
+    font-weight: bold;
+    /*text-transform: uppercase;*/
+}
+
+.wallpaper span {
+    margin-top: -1rem;
+    margin-bottom: 1rem;
+    font-size: 1.8rem;
 }
 
 .wall-data {
@@ -960,8 +969,7 @@ footer*/
     width: 100%;
     height: 100%;
     position: absolute;
-    opacity: 0.9;
-    background: linear-gradient(to left, #000, rgba(0, 0, 0, 0.6));
+    background: rgba(0, 0, 0, 0.8);
 }
 
 .wallpaper .sx-container {
