--- a/public/assets/css/style/button.css
+++ b/public/assets/css/style/button.css
@@ -26,10 +26,11 @@
     cursor: pointer;
     -webkit-user-select: none;
        -moz-user-select: none;
-            user-select: none;
+            -ms-user-select: none;
+        user-select: none;
     background-color: transparent;
     border: 1px solid transparent;
-    padding: 1rem 0.75rem;
+    padding: 0.375rem 0.75rem;
     border-radius: 0.15rem;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
