--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -37,11 +37,16 @@
 .wr-navbar {
     top: 0;
     width: 100%;
-    height: 70px;
+    height: 50px;
     z-index: 1080;
     position: fixed;
     font-family: 'Segoe UI';
     color: rgba(255, 255, 255, 0.7);
+    transition: background-color 0.2s ease-in-out;
+}
+
+.wr-navbar.dark {
+    background-color: #252729;
 }
 
 .wr-navbar [class*="container"] {
@@ -70,13 +75,23 @@
     color: rgba(255, 255, 255, 0.7);
 }
 
+.wr-navbar-link p {
+    margin: 0;
+}
+
 .wr-navbar-item.ml-auto {
     padding: 0 1rem;
     background-color: #F71;
 }
 
+.wr-navbar .wr-navbar-link.active,
 .wr-navbar-link:hover {
     color: #fff;
+}
+
+.wr-navbar.dark .wr-navbar-link.active,
+.wr-navbar.dark .wr-navbar-link:hover {
+    color: #f71;
 }
 
 .wr-navbar-title {
@@ -85,7 +100,11 @@
     align-items: center;
     color: #F71;
     font-size: 1.3rem;
-    font-family: 'Inter-Regular';
+    font-family: 'Inter-Bold';
+}
+
+.wr-navbar.dark .wr-navbar-title {
+    color: #fff;
 }
 
 .wr-navbar-title .colored {
