--- a/public/assets/css/style/form.css
+++ b/public/assets/css/style/form.css
@@ -59,6 +59,10 @@
 .form-input {
   display: block;
   width: 100%;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   padding: 0.375rem 0.75rem !important;
   font-size: 1rem;
   font-weight: 400;
@@ -73,6 +77,10 @@
           appearance: none;
   border-radius: 0.15rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+label {
+    cursor: pointer;
 }
 
 @media (prefers-reduced-motion: reduce) {
