--- a/public/assets/css/faqs.css
+++ b/public/assets/css/faqs.css
@@ -8,6 +8,7 @@ details {
   border: 1px solid rgba(0,0,0,.1);
   border-radius: 15px;
   box-sizing: border-box;
+  -webkit-transition: all .3s;
   transition: all .3s;
   background-color: #f6f7f8;
 }
@@ -28,9 +29,15 @@ details p {
 }
 
 summary {
+  display: -webkit-box;
+  display: -webkit-flex;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+          justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+          align-items: center;
   font-weight: 500;
   cursor: pointer;
 }
@@ -57,6 +64,7 @@ summary::-webkit-details-marker {
 
 .control-icon {
   fill: rebeccapurple;
+  -webkit-transition: .3s ease;
   transition: .3s ease;
   pointer-events: none;
 }
@@ -67,6 +75,7 @@ summary::-webkit-details-marker {
 
 details[open] .control-icon-close {
   display: initial;
+  -webkit-transition: .3s ease;
   transition: .3s ease;
 }
 
@@ -118,8 +127,6 @@ details[open] .control-icon-expand {
   border: none;
   background: none;
   -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 
@@ -139,8 +146,6 @@ details[open] .control-icon-expand {
   color: #3B566E;
   text-decoration: none !important;
   -webkit-transition: all 0.3s ease 0s;
-  -moz-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   cursor: pointer;
   padding-top: 20px;
@@ -153,8 +158,6 @@ details[open] .control-icon-expand {
   height: 20px;
   line-height: 14px;
   float: left;
-  -webkit-border-radius: 100px;
-  -moz-border-radius: 100px;
   border-radius: 100px;
   text-align: center;
   background: #E91E63;
