--- a/public/assets/css/frequent.css
+++ b/public/assets/css/frequent.css
@@ -8,14 +8,23 @@
     height: 70px;
     overflow: hidden;
     cursor: pointer;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
-    align-items: flex-start;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+            align-items: flex-start;
     border-bottom: 1px solid #ced4da;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     padding: 1rem 1rem 0.5rem;
     position: relative;
+    -webkit-transition: height 0.2s ease-in-out;
     transition: height 0.2s ease-in-out;
 }
 
@@ -43,8 +52,12 @@
 .faq-item .question {
     width: 100%;
     height: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+            align-items: center;
     gap: 10px;
     font-size: 1rem;
     border-radius: 10px;
@@ -63,20 +76,30 @@
 }
 
 .faq-item .bi.bi-plus {
+    display: -webkit-box;
+    display: -webkit-flex;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+            justify-content: center;
     width: 30px;
     height: 30px;
     aspect-ratio: 1/1;
     border-radius: 50%;
     background-color: #ddd;
+    -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, -webkit-transform 0.15s ease-in-out;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, -webkit-transform 0.15s ease-in-out;
     transition: transform 0.15s ease-in-out, color 0.15s ease-in-out, background-color 0.15s ease-in-out;
+    transition: transform 0.15s ease-in-out, color 0.15s ease-in-out, background-color 0.15s ease-in-out, -webkit-transform 0.15s ease-in-out;
 }
 
 .faq-item.open .bi-plus {
     color: #fff;
-    transform: rotateZ(140deg);
+    -webkit-transform: rotateZ(140deg);
+            transform: rotateZ(140deg);
     background-color: #f71;
 }
 
