--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -1527,9 +1527,23 @@ Overlay
 
 .contain_choose {
     position: relative;
-    border: solid 1px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
+    border: solid 1px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.1);
     border-radius: 4px;
+    min-height: 50vh;
+}
+
+.contain_choose img {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    -o-object-position: top;
+       object-position: top;
+    -o-object-fit: cover;
+       object-fit: cover;
+    position: relative;
 }
 
 .contain_choose>div {
@@ -1551,8 +1565,8 @@ Overlay
 }
 
 .contain_choose:hover .target_visible {
-    background-color: #000;
-    cursor: zoom-in;
+    background-color: rgba(0, 0, 0, 0.3);
+    /*cursor: zoom-in;*/
 }
 
 
