--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -2381,7 +2381,7 @@ h6 {
     border-radius: 4px;
     margin-top: 2.5rem;
     box-shadow: 0 0 0.5rem 0 rgba(0, 0, 0, 0.1);
-    background-color: #fafafa;
+    background-color: #fafafa !important;
     display: -webkit-box;
     display: -webkit-flex;
     display: flex;
@@ -2402,7 +2402,7 @@ h6 {
 .service:hover  {
     -webkit-transform: scale(1.05);
             transform: scale(1.05);
-    background-color: #f71;
+    background-color: #f71 !important;
     color: #fff;            
 }
 
