--- a/public/assets/css/style/button.css
+++ b/public/assets/css/style/button.css
@@ -32,6 +32,7 @@
     border: 1px solid transparent;
     padding: 0.375rem 0.75rem;
     border-radius: 0.15rem;
+    -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
@@ -41,7 +42,7 @@
 
 .btn:focus {
     outline: 0;
-    box-shadow: 0 0 0 0.25rem rgba(13, 110, 233, 0.25);
+    /*box-shadow: 0 0 0 0.25rem rgba(13, 110, 233, 0.25);*/
 }
 
 .btn:disabled, .btn.disabled {
@@ -69,7 +70,7 @@
 }
 
 .btn-primary {
-    color: #fff;
+    color: #fff !important;
     background-color: #07f;
 }
 
@@ -87,7 +88,7 @@
     color: #fff;
     background-color: #F71;
     border-color: #F71;
-    box-shadow: 0 0 0 0.25rem rgba(253, 126, 20, 0.25);
+    box-shadow: 0px 0 1px 2.5px rgba(253, 126, 20, 0.25) !important;
 }
 
 .btn-orange:hover {
