--- a/public/assets/css/style/form.css
+++ b/public/assets/css/style/form.css
@@ -35,8 +35,13 @@
 }
 
 .form-group:has(input-label) {
+  display: -webkit-box;
+  display: -webkit-flex;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+          flex-direction: column;
 }
 
 .form-group .content-input {
@@ -55,6 +60,29 @@
   outline: none;
   transition: box-shadow 0.2s ease-in-out;
 }*/
+
+.form-select {
+    display: block;
+    width: 100%;
+    padding: 0.375rem 2.25rem 0.375rem 0.75rem;
+    -moz-padding-start: calc(0.75rem - 3px);
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    border: 1px solid #ced4da;
+    background-color: #fff;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right 0.75rem center;
+    background-size: 16px 12px;
+    border-radius: 0.15rem;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+    -webkit-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
 
 .form-input {
   display: block;
@@ -76,6 +104,7 @@
      -moz-appearance: none;
           appearance: none;
   border-radius: 0.15rem;
+  -webkit-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
@@ -85,10 +114,12 @@ label {
 
 @media (prefers-reduced-motion: reduce) {
   .form-input {
+    -webkit-transition: none;
     transition: none;
   }
 }
 
+.form-select:focus,
 .form-input:focus {
   color: #212529;
   background-color: #fff;
@@ -172,9 +203,15 @@ label {
   top: 38%;
   left: 0;
   position: absolute;
+  display: -webkit-box;
+  display: -webkit-flex;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+          justify-content: center;
   background: #ccc;
   padding: 10px;
   border-radius: 4px 0 0 4px;
