--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -2430,3 +2430,91 @@ h6 {
     -webkit-transform: translateY(-50%);
             transform: translateY(-50%);
 }
+
+
+
+
+
+
+
+
+
+.smslead {
+    width: 100%;
+    padding-bottom: 1rem;
+    position: relative;
+    background-color: #fafafa;
+    border-radius: 4px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.05);
+    -webkit-transition: background-color 0.15s ease-in-out;
+    transition: background-color 0.15s ease-in-out;
+}
+
+.smslead:hover {
+    background-color: #fff;
+}
+
+.sms-basic .remeter {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+            align-items: flex-start;
+    padding: 1rem 0;
+    gap: 0.7rem;            
+}
+
+.sms-basic .client {
+    width: 35px;
+    height: 35px;
+    aspect-ratio: 1/1;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+            justify-content: center;
+    border-radius: 50%;
+    background-color: #6c757d;
+    color: #fff;
+}
+
+.remeter .name > span {
+    font-family: 'Inter-Bold';
+}
+
+.remeter .name > span + small {
+    margin-top: -3px;
+    margin-bottom: -3px;
+}
+
+.smslead .contain{
+    padding: 0 1rem;
+}
+
+.sms-replications {
+    margin-top: 1rem;
+    height: 0;
+    overflow: hidden;
+    -webkit-transition: height 0.2s ease;
+    transition: height 0.2s ease;
+}
+
+.sms-replications.expand {
+    height: auto;
+}
+
+.sms-replications .input-group,
+.sms-replications form {
+    position: relative;
+}
+
+.sms-replications button {
+    top: 10%;
+    right: 10px;
+    position: absolute;
+}
