--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -2378,6 +2378,7 @@ h6 {
 .service {
     width: 100%;
     height: 125px;
+    aspect-ratio: 16/9;
     border-radius: 4px;
     margin-top: 2.5rem;
     box-shadow: 0 0 0.5rem 0 rgba(0, 0, 0, 0.1);
@@ -2441,6 +2442,8 @@ h6 {
 
 .smslead {
     width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
     padding-bottom: 1rem;
     position: relative;
     background-color: #fafafa;
