--- a/public/assets/css/style/style.css
+++ b/public/assets/css/style/style.css
@@ -2521,3 +2521,7 @@ input[type="checkbox"]:checked:before {
     background-color: #F71;
 
 }
+.btn {
+    margin: 0 !important;
+    border-radius: 0.15rem;
+}
